# ProjetoCalculoNumerico

./: .gitignore  Aproximador.py  AproximadorDeZeros.c  CMakeList.txt  CMakeLists.txt  README.md  build_project.py
Bibliotecas/: CMakeLists.txt  Metodos.c  Metodos.h  Metodos.py
Website/: index.html  script.js  style.css
